[workspace]
members = [
    "control_panel",
    "core",
    "core_tests",
    "examples/binance_demo",
    "examples/binance_demo_new",
    "examples/strategies",
    "exchanges/binance",
    "mmb_database",
    "mmb_rpc",
    "mmb_utils",
    "visualization/api"
]
exclude = [
    "examples/serum_demo",
    "exchanges/serum",
]