[package]
name = "control_panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-server = "=2.1"
actix-web = { version = "4.0" }
anyhow = "1"
futures = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
jsonrpc-derive = "18.0.0"
log = "0.4"
mmb_rpc = { path = "../mmb_rpc" }
mmb_utils = { path = "../mmb_utils" }
parking_lot = { version = "0.11", features = ["serde"]}
tokio = { version = "1", features = ["macros", "time", "sync", "rt", "signal"]}


[[bin]]
name = "control_panel"
path = "main.rs"
test = false
bench = false
