[package]
name = "mmb_core"
version = "0.1.0"
authors = ["Evgeny Khudoba <evgeny.khudoba@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "0.8", features = ["serde", "v4"]}

dashmap = "4"
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
itertools = "0.10"
bytes = "1"
regex = "1"
toml_edit = { version = "0.10", features = ["serde"] }

serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"

parking_lot = { version = "0.11", features = ["serde"]}

tokio = { version = "1", features = ["macros", "time", "sync", "rt-multi-thread", "signal"]}

jsonrpc-core = "18.0.0"
jsonrpc-ipc-server = "18.0.0"

libc = "0.2"
form_urlencoded = "1"
hyper-tls = "0.5"
hyper = { version = "0.14", features = ["http1", "runtime", "client", "tcp"] }

futures = "0.3"

smallstr = { version = "0.2", features = ["serde"]}

anyhow = "1"
thiserror = "1"
rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"

async-trait = "0.1"
hmac = "0.11"
crypto-mac = { version = "0.11", features = ["std"]}
sha2 = "0.9"
hex = "0.4"

enum-map = "1.1.1"

scopeguard = "1.1"
once_cell = "1.8"

mockall_double = "0.2"
paste = "1"

tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
url = "2.0"
mmb_rpc = { path = "../mmb_rpc" }
mmb_utils = { path = "../mmb_utils" }

[dev-dependencies]
rand = "0.8"
pretty_assertions = "1"
rstest = "0.10"
mockall = "0.10.2"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
