[package]
name = "mmb_core"
version = "0.1.0"
authors = ["Evgeny Khudoba <evgeny.khudoba@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"

bytes = "1"

chrono = { version = "0.4", features = ["serde"]}
crypto-mac = { version = "0.11", features = ["std"]}

dashmap = "4"

dyn-clone = "1"

enum-map = "1.1.1"

form_urlencoded = "1"
futures = "0.3"

hex = "0.4"
hmac = "0.11"
hyper = { version = "0.14", features = ["http1", "runtime", "client", "tcp"] }
hyper-tls = "0.5"

itertools = "0.10"

jsonrpc-core = "18.0.0"
jsonrpc-ipc-server = "18.0.0"

log = "0.4"

mmb_rpc = { path = "../mmb_rpc" }
mmb_utils = { path = "../mmb_utils" }
mmb_database = { path = "../mmb_database" }

mockall_double = "0.2"

once_cell = "1.8"

parking_lot = { version = "0.12", features = ["serde"]}
paste = "1"

regex = "1"
rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"

scopeguard = "1.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.9"
smallstr = { version = "0.2", features = ["serde"]}

thiserror = "1"
tokio = { version = "1", features = ["macros", "time", "sync", "rt-multi-thread", "signal"]}
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
tokio-util = "0.7"
toml_edit = { version = "0.12", features = ["serde"] }
typetag = "0.1.8"

url = "2.0"
uuid = { version = "0.8", features = ["serde", "v4"]}

[dev-dependencies]
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
mockall = "0.10.2"
ntest = "0.8"
pretty_assertions = "1"
rand = "0.8"
rstest = "0.10"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
