[package]
name = "core_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

chrono = { version = "0.4", features = ["serde"]}

futures = "0.3"

mmb_core = { path = "../core" }
mmb_domain = { path = "../domain" }
mmb_utils = { path = "../mmb_utils" }

parking_lot = { version = "0.12", features = ["serde"]}
rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"

tokio = { version = "1", features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot"]}
