[package]
name = "mmb_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"]}
dashmap = "4"
dyn-clone = "1.0.9"
enum-map = "1.1.1"
hyper = { version = "0.14" }
itertools = "0.10"
log = "0.4"
mmb_utils = { path = "../mmb_utils" }
once_cell = "1.8"
parking_lot = { version = "0.12", features = ["serde"]}
paste = "1"
regex = "1"
rust_decimal = "1.25"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
smallstr = { version = "0.2", features = ["serde"]}
tokio = { version = "1", features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot"]}
typetag = "0.2.3"
uuid = { version = "0.8", features = ["serde", "v4"]}

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.15.0"
