[package]
name = "mmb_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
log = "0.4"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
once_cell = "1.8"
parking_lot = { version = "0.12", features = ["serde"]}
scopeguard = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
