[package]
name = "mmb_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
itertools = "0.10"
log = "0.4"
ntest = "0.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
serde_json = "1"
# In the project with workspaces threre is conflict between features `runtime-tokio-rustls` and `runtime-actix-rustls`.
# According  https://github.com/launchbadge/sqlx/issues/894#issuecomment-747821912 , for postgres db, we will have same result using only feature `runtime-tokio-rustls`.
sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }

[dev-dependencies]
once_cell = "1.8"
parking_lot = { version = "0.12", features = ["serde"]}
scopeguard = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
