[package]
name = "mmb_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"

futures = "0.3"

log = "0.4"

once_cell = "1.8"

parking_lot = { version = "0.11", features = ["serde"]}

rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"

tokio = { version = "1", features = ["macros", "time", "sync", "rt", "signal"]}

uuid = { version = "0.8", features = ["serde", "v4"]}
