[package]
name = "mmb_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
backtrace = "0.3.63"
bitflags = "1.3.2"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.3"

log = "0.4"
log4rs = "1.1"
log4rs-logstash = "0.1"

mockall_double = "0.3"
once_cell = "1.8"
parking_lot = { version = "0.12", features = ["serde"]}
paste = "1"
rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
smallstr = { version = "0.3", features = ["serde"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "rt", "signal", "parking_lot"]}
uuid = { version = "1", features = ["serde", "v4"]}

[dev-dependencies]
mockall = "0.11"
