[package]
name = "example_binance_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"]}
anyhow = "1"
itertools = "0.10"

mmb_core = { path = "../../core" }
binance = { path = "../../exchanges/binance" }
strategies = { path = "../strategies" }