[package]
name = "example_serum_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"]}

mmb_core = { path = "../../core" }
mmb_utils = { path = "../../mmb_utils" }
serum = { path = "../../exchanges/serum" }
strategies = { path = "../strategies" }