[package]
name = "strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
anyhow = "1"
rust_decimal = { version = "1" , features = ["maths"]}
rust_decimal_macros = "1"

serde = { version = "1", features = ["derive"]}

mmb_core = { path = "../../core" }
mmb_domain = { path = "../../domain" }
mmb_utils = { path = "../../mmb_utils" }