[package]
name = "binance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"]}
dashmap = "4"
hex = "0.4"
hmac = "0.11"
itertools = "0.10"
log = "0.4"
mmb_core = { path = "../../core/" }
mmb_utils = { path = "../../mmb_utils" }
parking_lot = { version = "0.11", features = ["serde"]}
rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"
sha2 = "0.9"
tokio = { version = "1" }
url = "2.0"
hyper = { version = "0.14", features = ["http1", "runtime", "client", "tcp"] }
function_name = "0.2.0"

[dev-dependencies]
actix-rt = "2"
core_tests = { path = "../../core_tests" }
futures = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
mmb_rpc = { path = "../../mmb_rpc" }
