[package]
name = "serum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"

dashmap = "4"

mmb_core = { path = "../../core/" }
mmb_utils = { path = "../../mmb_utils" }

parking_lot = { version = "0.11", features = ["serde"]}

rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"

safe-transmute = "0.11"

serde_json = "1"

serum_dex = "0.4"
solana-client = "1.9"
solana-program = "1.9"
spl-token = { version = "3.2", features = ["no-entrypoint"], default-features = false }

tokio = { version = "1" }

url = "2.0"
