[package]
name = "serum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dashmap = "4"
futures = "0.3"
itertools = "0.10"
log = "0.4"
memoffset = "0.6"
mmb_core = { path = "../../core/" }
mmb_utils = { path = "../../mmb_utils" }
once_cell = "1.8"
parking_lot = { version = "0.11", features = ["serde"]}
paste = "1"
rand = "0.7"
rust_decimal = { version = "1", features = ["maths"]}
rust_decimal_macros = "1"
safe-transmute = "0.11"
serde = "1"
serde_json = "1"
serum_dex = "0.5"
solana-account-decoder = "1.9"
solana-client = "1.9"
solana-client-helpers = "1.0"
solana-program = "1.9"
solana-sdk = "1.9"
spl-token = { version = "3.2", features = ["no-entrypoint"], default-features = false }
tokio = { version = "1" }
url = "2.0"
function_name = "0.2.0"

[dev-dependencies]
core_tests = { path = "../../core_tests" }