[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-broker = "0.4.2"
actix-cors = "0.6.1"
actix-web = "4"
actix-web-actors = "4.1"
chrono = "0.4.19"
env_logger = "0.9"
futures = "0.3.21"
itertools = "0.10.3"
jsonwebtoken = "8.1.0"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-actix-rustls" ] }
