[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-broker = "0.4.2"
actix-cors = "0.6.1"
actix-web = "4"
actix-web-actors = "4.1"
anyhow = "1"
casbin = { version = "2.0.9", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
chrono = "0.4.19"
env_logger = "0.9"
futures = "0.3.21"
itertools = "0.10.3"
jsonwebtoken = "8.1.0"

log = "0.4"
log4rs = "1.1"
log4rs-logstash = "0.1"

mmb_domain = { path = "../../domain" }
mmb_utils = { path = "../../mmb_utils" }

rand = "0.8.5"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
serde-aux = "3.0.1"
serde = { version = "1", features=["derive"]}
serde_json = "1.0"
sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.10.0", features = ["fs", "io-util", "parking_lot"] }
toml = "0.5.9"
