[package]
name = "vis_robot_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
function_name = "0.3"
itertools = "0.10"
log = "0.4"
mmb_core = { path = "../../core" }
mmb_database = { path = "../../mmb_database" }
mmb_domain = { path = "../../domain" }
mmb_utils = { path = "../../mmb_utils" }
rust_decimal = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"]}
uuid = { version = "1", features = ["serde", "v4"]}